--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 version: '3.8'
 services:
   app: 
-    image: php:8.0-apache
+    image: php:8.2-apache
     container_name: laravel-app
     volumes:
-      - ./laravel-app:/var/www/htmls
+      - ./laravel-app:/var/www/html
     ports:
       - 8000:8000
     networks:
